[project]
name = "invisible-watermark"
version = "0.2.0"
description = "The library for creating and decoding invisible image watermarks"
authors = [
    { name = "Qingquan Wang", email = "wangqq1103@gmail.com" }
]
dependencies = [
    "Pillow>=6.0.0",
    "PyWavelets>=1.1.1",
    "numpy>=1.17.0",
    "opencv-python>=4.1.0.25",
]
readme = "README.md"
requires-python = ">=3.6"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["imwatermark"]
